--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
   "rules": {
     "semi": "off",
     "arrow-parens": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "linebreak-style": "off",
+    "eol-last": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
