--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.7.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-security": "^1.4.0",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
     "sass": "^1.26.10",
