--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pure JS Excel Application",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "cross-env NODE_ENV=development webpack-dev-server --open",
     "build": "cross-env NODE_ENV=production webpack --mode production"
   },
@@ -35,6 +36,7 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-security": "^1.4.0",
     "html-webpack-plugin": "^4.4.1",
+    "jest": "^26.4.2",
     "mini-css-extract-plugin": "^0.11.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.1",
@@ -44,6 +46,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.10.4",
+    "eslint-plugin-jest": "^24.0.1",
     "normalize.css": "^8.0.1"
   }
 }
